# CADNA_tools_for_MadGraph5

./: .gitignore  Cadnize.sh  README.md  cadnaCompile.txt  cadnize_CPPProcess_cout_amp_fp.py  cadnize_bridge.py  cadnize_check_sa.py  cadnize_constexpr_replace.py  cadnize_exact_momenta_to_load_momenta.py  cadnize_expand_equations.py  cadnize_libflags.py  cadnize_seed_change.py  cadnize_std_replace.py  copyToMG.sh  energy_histograms.py  energy_histograms_cuts.py  histogram.py  histogram_CPPProcess.py  histogram_functions_in_CPPProcess.py  histogram_mul_sub.py  native_output_postprocess.py  read_momenta.h  test.sh  test_all.py  test_all.sh
Arithmetics/: Double.h  HelAmpsDenomExpand.py  basicOPs.h  errorFreeOPs.h
boiler_plate/: CMakeLists.txt  README.md  main.cpp  make_boilerplate.sh  promise.yml  promiseAnalyse.py
boiler_plate/src/: .gitignore  CPPProcess.cc  CPPProcess.cpp  CPPProcess.h  CPPProcess_proc.h  Complex.h  HelAmps_sm.h  MemoryBuffers.h  Parameters_sm.h  calculate_jamps.h  color_sum.cc  color_sum.h  color_sum_cpu.h  commonNums.h  constexpr_math.h  fillers.h  promisesHelAmps.py  read_momenta.h  transformer.py  typeTraits.h
boiler_plate/src/accesses/: MemoryAccessAmplitudes.h  MemoryAccessAmplitudes_d.h  MemoryAccessAmplitudes_f.h  MemoryAccessChannelIds.h  MemoryAccessCouplings.h  MemoryAccessCouplingsFixed.h  MemoryAccessCouplingsFixed_d.h  MemoryAccessCouplingsFixed_f.h  MemoryAccessCouplings_d.h  MemoryAccessCouplings_f.h  MemoryAccessGs.h  MemoryAccessHelpers.h  MemoryAccessMatrixElements.h  MemoryAccessMatrixElements_d.h  MemoryAccessMatrixElements_f.h  MemoryAccessMomenta.h  MemoryAccessMomenta_d.h  MemoryAccessMomenta_f.h  MemoryAccessRandomNumbers.h  MemoryAccessVectors.h  MemoryAccessWavefunctions.h  MemoryAccessWavefunctions_d.h  MemoryAccessWavefunctions_f.h  MemoryAccessWeights.h  includeAcesses.h
boiler_plate/src/boilerplate/: Complex.h  MemoryBuffers.h  Parameters_sm.cc  Parameters_sm.h  commonNums.h  constexpr_math.h  fillers.h  momentaHandling.h  promiseTypes-Fitted.h  promiseTypes.h  read_momenta.h  repair_momenta.h  typeTraits.h
boiler_plate/src/old/: CPPProcess.cpp  CPPProcess.h
boiler_plate/src/srcpy/: cadnize_HelAmps.py  cadnize_constexpr_replace.py  cadnize_std_replace.py
doc/: cadnaCompile.txt  input_app.txt
orchestration/: .orchestrate_process_evaluation.sh.swp  README.md  batch_orchestration.sh  orchestrate_Energy_study.sh  orchestrate_PROMISE_workflow.sh  orchestrate_process_evaluation.sh  run_in_background.sh  run_orchestration_background.sh
(+26 files in other folders)
